Version 2022.8.1 (2022-08-02)
- Remove obsolete methods
- Remove obsolete device_address parameter

Version 2022.8.0 (2022-08-01)
- Fix pylint, mypy issues due to newer versions
- Remove properties of final members
- Add types to Final
- Init entity fields in init method
- Remove device_info from model
- Remove attributes from model

Version 2022.7.14 (2022-07-28)
- Add HmIP-BS2 to custom entities
- Remove force and add call_source for getValue

Version 2022.7.13 (2022-07-22)
- Cleanup API
- Limit init cache time usage
- Avoid repetitive calls to CCU within max_age_seconds

Version 2022.7.12 (2022-07-21)
- Add ELV-SH-BS2 to custom entities
- Code Cleanup
- Rearrange validity check
- Cleanup entity code

Version 2022.7.11 (2022-07-19)
- Raise interval for alive checks

Version 2022.7.10 (2022-07-19)
- Use entities instead of values inside custom entities
- Fix _check_connection for Homegear/CCU

Version 2022.7.9 (2022-07-17)
- Remove state_uncertain from default attributes

Version 2022.7.8 (2022-07-13)
- Fix entity update

Version 2022.7.7 (2022-07-12)
- Fix naming of custom entity

Version 2022.7.6 (2022-07-12)
- Fix last_state handling for custom entities

Version 2022.7.5 (2022-07-11)
- Rename value_uncertain to state_uncertain
- Add state_uncertain to custom entity

Version 2022.7.4 (2022-07-11)
- Set value_uncertain to True if no data could be loaded from CCU

Version 2022.7.3 (2022-07-10)
- Set default value for hub entity to None

Version 2022.7.2 (2022-07-10)
- Align enity naming to HA entity name
- Ensure entity value refresh after reconnect
- Ignore further parameters by device

Version 2022.7.1 (2022-07-07)
- Better distinguish between NO_CACHE_ENTRY and None

Version 2022.7.0 (2022-07-07)
- Switch to calendar versioning for hahomematic

Version 1.9.4 (2022-07-03)
- Load MASTER data on initial load

Version 1.9.3 (2022-07-02)
- Fix export of device definitions

Version 1.9.2 (2022-07-01)