@@ -1,6 +1,7 @@
 Version 2022.8.1 (2022-08-02)
 - Remove obsolete methods
 - Remove obsolete device_address parameter
+- Rename sysvar to hub entity
 
 Version 2022.8.0 (2022-08-01)
 - Fix pylint, mypy issues due to newer versions
